<resources>
    <string name="app_name">Plane Your Day</string>
    <string name="launcher_background_image">Launcher Background Image</string>
    <string name="icon_of_the_application">icon of the application</string>
    <string name="chat_box_here">chat box here</string>
    <string name="send_button_background_image">send button background image</string>
    <string name="type_your_message">\t Type Your Message</string>
    <string name="bot_profile">Bot profile</string>
    <string name="status_picture">Status picture</string>
    <string name="place_data_divider">place data divider</string>
    <string name="arrow_key">arrow key</string>
    <string name="enter">Enter</string>
    <string name="to_do_list">To-Do-List</string>
    <string name="place">Place ?</string>
    <string name="iconbar">iconBar</string>
    <string name="where_you_want_to_go">Where you want to go ?</string>
    <string name="please_write_your_answer">Click here to write your answer</string>
    <string name="what_is_your_current_location">What is your current location ?</string>
    <string name="reaching_time_at_that_place">Reaching time at that place ?</string>
    <string name="make">Make</string>
    <string name="date_of_the_event">Date of the event ?(DD-MM-YYYY)</string>
    <string name="purpose">Purpose ?</string>
    <string-array name="activitiesString">
        <item>Start</item>
        <item>Make Your Plan</item>
        <item>View Your Plan</item>
    </string-array>
</resources>