<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGroundColor"
    tools:context=".EventSetActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/barHolder"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/purple_200">

        <ImageView
            android:id="@+id/group_icon"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_marginStart="7dp"
            android:contentDescription="@string/iconbar"
            android:padding="5dp"
            android:src="@drawable/icon"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/labled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="100dp"
            android:text="@string/to_do_list"
            android:textColor="@color/black"
            android:textSize="26sp"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/whereTogo"
        app:layout_constraintTop_toBottomOf="@id/barHolder"
        android:layout_marginTop="10dp"
        android:background="@drawable/bot_sent_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textSize="18sp"
        android:layout_marginStart="7dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/where_you_want_to_go"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/userAnswerDesPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/backgroud_sent_message"
        android:hint="@string/please_write_your_answer"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginEnd="7dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/whereTogo"
        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck,TextContrastCheck" />
    <TextView
        android:id="@+id/currentLocation"
        app:layout_constraintTop_toBottomOf="@id/userAnswerDesPlace"
        android:layout_marginTop="10dp"
        android:background="@drawable/bot_sent_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textSize="18sp"
        android:layout_marginStart="7dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/what_is_your_current_location"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/userAnswerCurPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/backgroud_sent_message"
        android:hint="@string/please_write_your_answer"
        android:importantForAutofill="no"
        android:inputType="text"
        android:layout_marginEnd="7dp"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currentLocation"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
    <TextView
        android:id="@+id/arrivalTime"
        app:layout_constraintTop_toBottomOf="@id/userAnswerCurPlace"
        android:layout_marginTop="10dp"
        android:background="@drawable/bot_sent_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textSize="18sp"
        android:layout_marginStart="7dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/reaching_time_at_that_place"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/userAnswerTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/backgroud_sent_message"
        android:hint="@string/please_write_your_answer"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="8dp"
        android:layout_marginEnd="7dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/arrivalTime"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
    <TextView
        android:id="@+id/eventDate"
        app:layout_constraintTop_toBottomOf="@id/userAnswerTime"
        android:layout_marginTop="10dp"
        android:background="@drawable/bot_sent_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textSize="17sp"
        android:layout_marginStart="7dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/date_of_the_event"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/userAnswerDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/backgroud_sent_message"
        android:hint="@string/please_write_your_answer"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:layout_marginEnd="7dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eventDate"
        tools:ignore="TextFields,TouchTargetSizeCheck,TextContrastCheck" />
    <TextView
        android:id="@+id/eventDetails"
        app:layout_constraintTop_toBottomOf="@id/userAnswerDate"
        android:layout_marginTop="10dp"
        android:background="@drawable/bot_sent_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textSize="17sp"
        android:layout_marginStart="7dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/purpose"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/userAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/backgroud_sent_message"
        android:hint="@string/please_write_your_answer"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="8dp"
        android:textColor="@color/white"
        android:layout_marginEnd="7dp"
        android:textSize="17sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eventDetails"
        tools:ignore="TextFields,TouchTargetSizeCheck,TextContrastCheck" />


    <Button
        android:id="@+id/make"
        android:text="@string/make"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/chatbox_background"
        android:layout_marginBottom="12dp"
        app:layout_constraintLeft_toLeftOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>